--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,10 @@
           package="com.ak.yellow.ribbon.locker.tests"
           android:versionCode="1"
           android:versionName="1.0">
+
+    <uses-sdk android:minSdkVersion="9"
+              android:targetSdkVersion="22" />
+
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
          which is needed when building test cases. -->
